--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "prod": "run-s build && ts-node src/index.ts"
   },
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "routing-controllers": "^0.10.4",
     "ts-node": "^10.9.2",
@@ -23,6 +23,8 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.5"
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12"
   }
 }
