--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "run-s build && ts-node src/index.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
@@ -17,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mssql": "^10.0.2",
     "routing-controllers": "^0.10.4",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
+    "@types/mssql": "^9.1.5",
     "@types/node": "^20.12.12"
   }
 }
