--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mssql": "^10.0.2",
+    "mysql2": "^3.9.7",
     "routing-controllers": "^0.10.4",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
