--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "prod": "run-s build && ts-node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -16,6 +15,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,7 +24,8 @@
     "routing-controllers": "^0.10.4",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
