--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -19,7 +20,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "routing-controllers": "^0.10.4",
     "ts-node": "^10.9.2",
