--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "mssql": "^10.0.2",
