--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
